syntax = "proto3";
package DomainServices.RealEstateValuationService.v1;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts.v1";

import "google/protobuf/empty.proto";
import "Messages/CreateRealEstateValuation.proto";
import "Messages/DeleteRealEstateValuation.proto";
import "Messages/GetRealEstateValuationList.proto";
import "Messages/PatchDeveloperOnRealEstateValuation.proto";
import "Messages/RealEstateValuationDetail.proto";
import "Messages/GetRealEstateValuationDetail.proto";
import "Messages/GetRealEstateValuationDetailByOrderId.proto";
import "Messages/UpdateRealEstateValuationDetail.proto";
import "Messages/SetACVRealEstateTypeByRealEstateValuation.proto";
import "Messages/UpdateStateByRealEstateValuation.proto";
import "Messages/AddDeedOfOwnershipDocument.proto";
import "Messages/DeleteDeedOfOwnershipDocument.proto";

service RealEstateValuationService {
   rpc CreateRealEstateValuation (CreateRealEstateValuationRequest) returns (CreateRealEstateValuationResponse);
   
   rpc DeleteRealEstateValuation (DeleteRealEstateValuationRequest) returns (google.protobuf.Empty);

   rpc GetRealEstateValuationList (GetRealEstateValuationListRequest) returns (GetRealEstateValuationListResponse);

   rpc PatchDeveloperOnRealEstateValuation (PatchDeveloperOnRealEstateValuationRequest) returns (google.protobuf.Empty);

   rpc GetRealEstateValuationDetail (GetRealEstateValuationDetailRequest) returns (RealEstateValuationDetail);

   rpc GetRealEstateValuationDetailByOrderId (GetRealEstateValuationDetailByOrderIdRequest) returns (RealEstateValuationDetail);

   rpc UpdateRealEstateValuationDetail (UpdateRealEstateValuationDetailRequest) returns (google.protobuf.Empty);

   rpc SetACVRealEstateTypeByRealEstateValuation (SetACVRealEstateTypeByRealEstateValuationRequest) returns (google.protobuf.Empty);

   rpc UpdateStateByRealEstateValuation (UpdateStateByRealEstateValuationRequest) returns (google.protobuf.Empty);

   rpc AddDeedOfOwnershipDocument (AddDeedOfOwnershipDocumentRequest) returns (AddDeedOfOwnershipDocumentResponse);

   rpc DeleteDeedOfOwnershipDocument (DeleteDeedOfOwnershipDocumentRequest) returns (google.protobuf.Empty);
}